# ml-llvm-project

./: .gitignore  .gitmodules  CMakeCache.txt  LOF_environment.yaml  README.md  ml_loop_distribution_build_script.sh  ml_phase_ordering_build_script.sh  mlgo-new.yml  mlgo_env_file.yml  mlopt.yml  newrdg.cpp  requirement.yaml  requirements.txt  rllib_env.yaml
IR2Vec/: CMakeLists.txt  CollectIR.cpp
IR2Vec-Engine/IR2Vec/: CMakeLists.txt  IR2Vec-RD.cpp
IR2Vec/CollectIR/: CMakeLists.txt  CollectIR.cpp
IR2Vec/FlowAware/: CMakeLists.txt  IR2Vec-FA.cpp
IR2Vec/Symbolic/: CMakeLists.txt  IR2Vec-Symbolic.cpp
IR2Vec/include/: CollectIR.h  IR2Vec-FA.h  IR2Vec-Symbolic.h  VectorSolver.h
IR2Vec/test-suite/: CMakeLists.txt  Generate_IR2vec.sh.bkp  generate_llfiles.sh  sanity_check copy.sh  sanity_check.sh.cmake
IR2Vec/test-suite/PE-benchmarks/: binomial-coefficient.cpp  boolean-parenthesization-problem.cpp  box-stacking.cpp  cutting-a-rod.cpp  edit-distance.cpp  m-coloring-problem.cpp  subset-sum.cpp  tarjan-algorithm.cpp  topological-sorting.cpp  tug-of-war.cpp  union-find.cpp
LLVM/llvm/lib/Transforms/IR2Vec-LOF/: CMakeLists.txt
LLVM/llvm/tools/opt/: CMakeLists.txt  opt.cpp
ir2vec/: CMakeLists.txt
ir2vec/src/: CMakeLists.txt
llvm/lib/CodeGen/MLRegAlloc/: CMakeLists.txt  Config.h.cmake  Floatwrapper.cpp  Floatwrapper.h  InteractiveModelRunner.cpp  MLRegAlloc.cpp  README.md  TrainingLogger.cpp
llvm/lib/CodeGen/MLRegAlloc/config_json/: AArch64_supported_RegClasses.json  AArch64_supported_reg.json  AArch64_unsupported_regs.json  RegColorMap.json  RegColorMap_AArch64.json  RegColorMap_Both.json  RegColorMap_X86.json  X86_supported_reg.json  X86_unsupported_regs.json  riscv64_RegClasses.json  riscv64_overlaps_info.json  riscv64_reg_info.json  riscv64_supported_RegClasses.json  riscv64_supported_reg.json  riscv64_unsupported_regs.json  temp.txt
llvm/lib/CodeGen/MLRegAlloc/inference/: CMakeLists.txt  X86_register_config_objects.cpp  agent.cpp  driver.cpp  multi_agent_env.cpp  multi_agent_env.h  topological_sort.cpp
llvm/lib/CodeGen/MLRegAlloc/register_scripts/: README.md  generate_register_classes.py  generate_supported_register_classes.py  generate_supported_regs_data.py  generate_unsupported_regIds_data.py
llvm/lib/Transforms/CodeSizeOpt/: CMakeLists.txt  CodeSizeOpt.cpp
llvm/lib/Transforms/CodeSizeOpt/inference/: CodeSizeOptEnv.h
llvm/lib/Transforms/Hello/: CMakeLists.txt  Hello.cpp
llvm/lib/Transforms/Hello-MLBridge/: CMakeLists.txt  Hello.cpp
llvm/lib/Transforms/Hello-MLBridge/inference/: HelloMLBridge_Env.h
llvm/lib/Transforms/Hello-MLBridge/tf_model/: LinearModel1000.h  LinearModel10000.h  LinearModel10500.h  LinearModel11000.h  LinearModel11500.h  LinearModel12000.h  LinearModel12500.h  LinearModel13000.h  LinearModel13500.h  LinearModel14000.h  LinearModel14500.h  LinearModel1500.h  LinearModel15000.h  LinearModel15500.h  LinearModel16000.h  LinearModel16500.h  LinearModel17000.h  LinearModel17500.h  LinearModel18000.h  LinearModel18500.h  LinearModel19000.h  LinearModel19500.h  LinearModel2000.h  LinearModel20000.h  LinearModel20500.h  LinearModel21000.h  LinearModel21500.h  LinearModel22000.h  LinearModel22500.h  LinearModel23000.h  LinearModel23500.h  LinearModel24000.h  LinearModel24500.h  LinearModel2500.h  LinearModel25000.h  LinearModel25500.h  LinearModel26000.h  LinearModel26500.h  LinearModel27000.h  LinearModel27500.h  (+61 more)
llvm/lib/Transforms/Hello-MLBridge/tf_models/: LinearModel1000.h  LinearModel10000.h  LinearModel10500.h  LinearModel11000.h  LinearModel11500.h  LinearModel12000.h  LinearModel12500.h  LinearModel13000.h  LinearModel13500.h  LinearModel14000.h  LinearModel14500.h  LinearModel1500.h  LinearModel15000.h  LinearModel15500.h  LinearModel16000.h  LinearModel16500.h  LinearModel17000.h  LinearModel17500.h  LinearModel18000.h  LinearModel18500.h  LinearModel19000.h  LinearModel19500.h  LinearModel2000.h  LinearModel20000.h  LinearModel20500.h  LinearModel21000.h  LinearModel21500.h  LinearModel22000.h  LinearModel22500.h  LinearModel23000.h  (+71 more)
llvm/lib/Transforms/IPO/: CMakeLists.txt  InlineSimple.cpp  PassManagerBuilder.cpp
llvm/lib/Transforms/PosetRL/: CMakeLists.txt  InteractiveModelRunner  posetRL.cpp
llvm/lib/Transforms/demoInferenceEnginePass/: CMakeLists.txt  Hello.cpp  HelloWorldDriver.h
mlir/lib/Transforms/: CMakeLists.txt  HelloMLBridgePass.cpp
mlir/lib/Transforms/inference/: HelloMLBridge_Env.h
mlir/lib/Transforms/tf_model/: LinearModel1000.h  LinearModel10000.h  LinearModel10500.h  LinearModel11000.h  LinearModel11500.h  LinearModel12000.h  LinearModel12500.h  LinearModel13000.h  LinearModel13500.h  LinearModel14000.h  LinearModel14500.h  LinearModel1500.h  LinearModel15000.h  LinearModel15500.h  LinearModel16000.h  LinearModel16500.h  LinearModel17000.h  LinearModel17500.h  LinearModel18000.h  LinearModel18500.h  LinearModel19000.h  LinearModel19500.h  LinearModel2000.h  LinearModel20000.h  LinearModel20500.h  LinearModel21000.h  LinearModel21500.h  LinearModel22000.h  LinearModel22500.h  LinearModel23000.h  LinearModel23500.h  LinearModel24000.h  LinearModel24500.h  LinearModel2500.h  LinearModel25000.h  LinearModel25500.h  LinearModel26000.h  LinearModel26500.h  LinearModel27000.h  LinearModel27500.h  (+61 more)
mlir/lib/Transforms/tf_models/: LinearModel1000.h  LinearModel10000.h  LinearModel10500.h  LinearModel11000.h  LinearModel11500.h  LinearModel12000.h  LinearModel12500.h  LinearModel13000.h  LinearModel13500.h  LinearModel14000.h  LinearModel14500.h  LinearModel1500.h  LinearModel15000.h  LinearModel15500.h  LinearModel16000.h  LinearModel16500.h  LinearModel17000.h  LinearModel17500.h  LinearModel18000.h  LinearModel18500.h  LinearModel19000.h  LinearModel19500.h  LinearModel2000.h  LinearModel20000.h  LinearModel20500.h  LinearModel21000.h  LinearModel21500.h  LinearModel22000.h  LinearModel22500.h  LinearModel23000.h  LinearModel23500.h  LinearModel24000.h  LinearModel24500.h  LinearModel2500.h  LinearModel25000.h  LinearModel25500.h  LinearModel26000.h  LinearModel26500.h  LinearModel27000.h  LinearModel27500.h  (+61 more)
(+5259 files in other folders)
